--- a/forms.html
+++ b/forms.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Styles/form.css">
     <title>FiggesSalong</title>
 </head>
@@ -17,6 +18,11 @@
            </h2>
     </header>
     <nav>
+       <!-- <li class="menu">
+            <a href="Hem" class="menyknapp">Hem</a>
+            <a href="Om oss" class="menyknapp">Om oss</a>
+            <a href="Tidsbokning" class="menyknapp">Tidsbokning</a>
+        </li> -->
             <ul class="menu">
                 <li><a href="#">Hem</a></li>
                 <li><a href="#">Om oss</a> </li>
@@ -47,7 +53,7 @@
                 <Option>Maria</Option>
                 <Option>Första lediga</Option>
             </select>
-            <label for="Describe">Beskriv ditt djurs salongvana</label>
+            <label for="Describe">Beskriv ditt djurs salongsvana</label>
             <input type="text">
             <div class="checkbox">
                  <input type="checkbox" checked>
