--- a/forms.html
+++ b/forms.html
@@ -11,58 +11,61 @@
 <body>
     <header>
            <h1>
-               Figges Frisösalong
+               Figges Frisörsalong
            </h1>
            <h2>
                För Hund & Katt
            </h2>
     </header>
     <nav>
-       <!-- <li class="menu">
-            <a href="Hem" class="menyknapp">Hem</a>
-            <a href="Om oss" class="menyknapp">Om oss</a>
-            <a href="Tidsbokning" class="menyknapp">Tidsbokning</a>
-        </li> -->
             <ul class="menu">
-                <li><a href="#">Hem</a></li>
-                <li><a href="#">Om oss</a> </li>
-                <li><a href="#">Tidsbokning</a></li>
+                <li><a href="#" class="menubutton">Hem</a></li>
+                <li><a href="#" class="menubutton">Om oss</a> </li>
+                <li><a href="#" class="menubutton">Tidsbokning</a></li>
             </ul>
     </nav>
-    <div class="form-container">
-        <form action="form">
-            <label for="Full name">Namn</label>
-            <input type="Name" placeholder="Your name">
-            <label for="Your email">Din email</label>
-            <input type="email" placeholder="Your email">
-            <Label>Hund eller katt</Label>
-            <select name="Hund eller katt" id="Hund eller Katt">
-                <option value="Hund">Hund</option>
-                <option value="Katt">Katt</option>
-            </select> 
-            <Label>Aktivitet</Label>
-            <select name="Aktivitet" id="Aktivitet">
-                <option value="Klo och klipp">Klo och klippning</option>
-                <option value="Endast klor">Endast kloklipp</option>
-                <option value="Endast klipp">Endast klippning</option>
-            </select>  
-            <Label>Frisör</Label>
-            <select name="Frisör" id="Frisör">
-                <Option>Figge</Option>
-                <Option>Eva</Option>
-                <Option>Maria</Option>
-                <Option>Första lediga</Option>
-            </select>
-            <label for="Describe">Beskriv ditt djurs salongsvana</label>
-            <input type="text">
-            <div class="checkbox">
-                 <input type="checkbox" checked>
-                 <span class="checkbox-rectangle">
-                 </span>
-                <div class="checkbox-title">Jag vill gärna få nyhetsbrev från Figges Frisörslong</div>
-            </div>
-            <button type="Submit">Submit</button>
-        </form>
-    </div>
+    <div class="main-container">
+        <div class="form-container">
+            <form action="form">
+                <label for="Full name">Namn</label>
+                <input type="Name" placeholder="Your name">
+                <label for="Your email">Din email</label>
+                <input type="email" placeholder="Your email">
+                <Label>Hund eller katt</Label>
+                <select name="Hund eller katt" id="Hund eller Katt">
+                    <option value="Hund">Hund</option>
+                    <option value="Katt">Katt</option>
+                </select> 
+                <Label>Aktivitet</Label>
+                <select name="Aktivitet" id="Aktivitet">
+                    <option value="Klo och klipp">Klo och klippning</option>
+                    <option value="Endast klor">Endast kloklipp</option>
+                    <option value="Endast klipp">Endast klippning</option>
+                </select>  
+                <Label>Frisör</Label>
+                <select name="Frisör" id="Frisör">
+                    <Option>Figge</Option>
+                    <Option>Eva</Option>
+                    <Option>Maria</Option>
+                    <Option>Första lediga</Option>
+                </select>
+                <label for="Describe">Beskriv ditt djurs salongsvana</label>
+                <input type="text">
+                <div class="checkbox">
+                    <input type="checkbox" checked>
+                    <span class="checkbox-rectangle">
+                    </span>
+                    <div class="checkbox-title">Jag vill gärna få nyhetsbrev från Figges Frisörsalong</div>
+                </div>
+                <button type="Submit">Submit</button>
+            </form>
+        </div> 
+        <div class="container-cat">
+            <img src="images/cat.JPG" alt="red_cat">
+        </div> 
+        <div class="container-dog">
+            <img src="images/dog.JPG" alt="happy_dog">
+        </div>
+    </div>      
 </body>
 </html>
