--- a/forms.html
+++ b/forms.html
@@ -66,6 +66,14 @@
         <div class="container-dog">
             <img src="images/dog.JPG" alt="happy_dog">
         </div>
-    </div>      
+    </div>
+    <footer>
+       <p>
+         Besöksadress: Läkarevägen 1, 211 44 Malmö
+       </p>
+       <p>
+         Jobba hos oss? Vi växrer hela tiden. Välkommen in med ditt CV! Maila till <a href = "mailto: figgessalong@mail.se" class="mail">Figges Salong</a>
+       </p>
+    </footer>      
 </body>
 </html>
