--- a/forms.html
+++ b/forms.html
@@ -36,7 +36,7 @@
                 <label class="label" for="Your email">Din email</label>
                 <input class="fill" type="email" placeholder="Din email" required autofocus>
                 <label class="label" for="Your number">Telefonnummer</label>
-                <input class="fill" type="number" placeholder="Ditt nummer" required autofocus>
+                <input class="fill" type="text" placeholder="Ditt nummer" required autofocus>
                     <Label class="label">Hund eller katt</Label>
                     <select class="fill" name="Hund eller katt" id="hund_eller_katt" required autofocus>
                         <option value="Hund">Hund</option>
